--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
-# src/main/resources/firebase/firebase-adminsdk.json
+src/main/resources/firebase/firebase-adminsdk.json
 ### STS ###
 .apt_generated
 .classpath
